{
  "version": 4,
  "terraform_version": "1.9.3",
  "serial": 187,
  "lineage": "ad1be12d-264d-22cc-0922-f3472a95f5e5",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:security-group/sg-002669cb5e6bfc45e",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-002669cb5e6bfc45e",
            "ingress": [],
            "name": "task-master-pro-cluster-cluster-20240726051604054600000008",
            "name_prefix": "task-master-pro-cluster-cluster-",
            "owner_id": "315124857886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "task-master-pro-cluster-cluster",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task-master-pro-cluster-cluster",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:security-group/sg-064b7cc7db4969f9b",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-064b7cc7db4969f9b",
            "ingress": [],
            "name": "task-master-pro-cluster-node-20240726051604068800000009",
            "name_prefix": "task-master-pro-cluster-node-",
            "owner_id": "315124857886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "task-master-pro-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/task-master-pro-cluster": "owned"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "task-master-pro-cluster-node",
              "Terraform": "true",
              "kubernetes.io/cluster/task-master-pro-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-2901985961",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-002669cb5e6bfc45e",
            "security_group_rule_id": "sgr-0070135c487fc0f96",
            "self": false,
            "source_security_group_id": "sg-064b7cc7db4969f9b",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2801137254",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-061228ebd76f9ddcf",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1408807305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-0b60b3f96e6e4f3b2",
            "self": false,
            "source_security_group_id": "sg-002669cb5e6bfc45e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1603513302",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-09fdcb1e289a2b1d7",
            "self": false,
            "source_security_group_id": "sg-002669cb5e6bfc45e",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2530331712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-0c64dbae7de81affd",
            "self": false,
            "source_security_group_id": "sg-002669cb5e6bfc45e",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2240671841",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-02708ea507613f345",
            "self": false,
            "source_security_group_id": "sg-002669cb5e6bfc45e",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-3777807274",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-03eff84067808d00a",
            "self": false,
            "source_security_group_id": "sg-002669cb5e6bfc45e",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-615827666",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-0e51b282d9877ada2",
            "self": false,
            "source_security_group_id": "sg-002669cb5e6bfc45e",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2775145679",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-08d11b7e2247b3dff",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1700752522",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-09921832d8749144a",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3238055781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-064b7cc7db4969f9b",
            "security_group_rule_id": "sgr-0c8fc5260c9d703b8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:network-acl/acl-081d796dd61202282",
            "default_network_acl_id": "acl-081d796dd61202282",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-081d796dd61202282",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "315124857886",
            "subnet_ids": [
              "subnet-017b6761ddb5864a9",
              "subnet-06564fb705bbcac39",
              "subnet-06d988d10559b7e24",
              "subnet-09b23ba623aa2ea08",
              "subnet-0c23d6dbf76a7a349",
              "subnet-0cc61d4a96b82ae9b"
            ],
            "tags": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:route-table/rtb-05ed2d53a46cea939",
            "default_route_table_id": "rtb-05ed2d53a46cea939",
            "id": "rtb-05ed2d53a46cea939",
            "owner_id": "315124857886",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:security-group/sg-094c171749b9dea07",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-094c171749b9dea07",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "315124857886",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-default",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0813da651f1276f6f",
            "arn": "arn:aws:ec2:ap-south-1:315124857886:elastic-ip/eipalloc-0813da651f1276f6f",
            "domain": "vpc",
            "id": "eipalloc-0813da651f1276f6f",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-110-13-34.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.110.13.34",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:internet-gateway/igw-0de20f5a6bc8df43b",
            "id": "igw-0de20f5a6bc8df43b",
            "owner_id": "315124857886",
            "tags": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0813da651f1276f6f",
            "association_id": "eipassoc-0f8fda82108004ba8",
            "connectivity_type": "public",
            "id": "nat-0a52267d8a4d55f14",
            "network_interface_id": "eni-01a49303ec968f877",
            "private_ip": "10.0.111.194",
            "public_ip": "3.110.13.34",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09b23ba623aa2ea08",
            "tags": {
              "Name": "my-vpc-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01ce116c00dc577611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0a52267d8a4d55f14",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01ce116c00dc57761",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0de20f5a6bc8df43b",
            "id": "r-rtb-0f3a176be60aecaf11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3a176be60aecaf1",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:route-table/rtb-01ce116c00dc57761",
            "id": "rtb-01ce116c00dc57761",
            "owner_id": "315124857886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-private",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:route-table/rtb-0f3a176be60aecaf1",
            "id": "rtb-0f3a176be60aecaf1",
            "owner_id": "315124857886",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f968544a820e3773",
            "route_table_id": "rtb-01ce116c00dc57761",
            "subnet_id": "subnet-0c23d6dbf76a7a349"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-031da675778c781fb",
            "route_table_id": "rtb-01ce116c00dc57761",
            "subnet_id": "subnet-0cc61d4a96b82ae9b"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fe805939a9dbe52",
            "route_table_id": "rtb-01ce116c00dc57761",
            "subnet_id": "subnet-06564fb705bbcac39"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa8915f3b278252e",
            "route_table_id": "rtb-0f3a176be60aecaf1",
            "subnet_id": "subnet-09b23ba623aa2ea08"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca5e94e5f2669a4",
            "route_table_id": "rtb-0f3a176be60aecaf1",
            "subnet_id": "subnet-017b6761ddb5864a9"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0168081a41b02b019",
            "route_table_id": "rtb-0f3a176be60aecaf1",
            "subnet_id": "subnet-06d988d10559b7e24"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:subnet/subnet-0c23d6dbf76a7a349",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c23d6dbf76a7a349",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315124857886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/internal-elb": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/internal-elb": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:subnet/subnet-0cc61d4a96b82ae9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cc61d4a96b82ae9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315124857886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/internal-elb": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-south-1b",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/internal-elb": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:subnet/subnet-06564fb705bbcac39",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06564fb705bbcac39",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315124857886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/internal-elb": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-private-ap-south-1c",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/internal-elb": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:subnet/subnet-09b23ba623aa2ea08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.111.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09b23ba623aa2ea08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315124857886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/elb": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-south-1a",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/elb": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:subnet/subnet-017b6761ddb5864a9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.112.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017b6761ddb5864a9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315124857886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/elb": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-south-1b",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/elb": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:subnet/subnet-06d988d10559b7e24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.113.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d988d10559b7e24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "315124857886",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/elb": "shared"
            },
            "tags_all": {
              "Name": "my-vpc-public-ap-south-1c",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared",
              "kubernetes.io/role/elb": "shared"
            },
            "vpc_id": "vpc-0457a4de4e0c74c2c"
          },
          "dependencies": [
            "data.aws_availability_zones.azs",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:315124857886:vpc/vpc-0457a4de4e0c74c2c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-081d796dd61202282",
            "default_route_table_id": "rtb-05ed2d53a46cea939",
            "default_security_group_id": "sg-094c171749b9dea07",
            "dhcp_options_id": "dopt-024b9d791ac6d1da5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0457a4de4e0c74c2c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05ed2d53a46cea939",
            "owner_id": "315124857886",
            "tags": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            },
            "tags_all": {
              "Name": "my-vpc",
              "kubernetes.io/cluster/task-master-pro-cluster": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}